--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -42,11 +42,6 @@
     .flex-gap{
       gap: 10px;
     }
-    .section-separator{
-      width: 100%;
-      height: 1px;
-      background-color: #3e3e3e27;
-    }
 
     h2{
       font-weight: 700;
@@ -147,15 +142,19 @@
     </ul>
   </div>
 <% if (profile?.admin) { %>
-  <div class="card">
-    <form id="course-form" class="card-body">
-      <h3>New course</h3>
-      <div class="form-group">
-      <label for="title">Title</label>
-      <input name="title" type="text" class="form-control" id="title">
+  <div class="admin-container">
+    <div class="container">
+      <div class="card">
+        <form id="course-form" class="card-body">
+          <h3>New course</h3>
+          <div class="form-group">
+          <label for="title">Title</label>
+          <input name="title" type="text" class="form-control" id="title">
+          </div>
+          <button type="submit" class="btn btn-primary">Create course</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-primary">Create course</button>
-    </form>
+    </div>
   </div>
 <% } %>
 </div>
