--- a/views/partials/utils_style.ejs
+++ b/views/partials/utils_style.ejs
@@ -15,4 +15,24 @@
       font-weight: 700;
       color: #3e3e3e;
     }
+
+    .admin-container{
+        background: #e68748;
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        padding: 1rem 0;
+    }
+
+    .admin-container::before{
+        color: white;
+        font-size: 3rem;
+        font-weight: bold;
+        content: "ADMIN PANEL";
+    }
+
+    .section-separator{
+      width: 100%;
+      height: 1px;
+      background-color: #3e3e3e27;
+    }
 </style>
