--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -37,11 +37,11 @@
         <p class="text-muted" style="margin: 0;">&copy; Copyright 2022 Online tutor</p>
     </div>
     <div class="wrapper">
-        <a class="icon" href="https://www.facebook.com/minhtri.teacher/">
+        <a class="icon" href="#">
             <i class="fab fa-facebook-f"></i>
         </a>
     
-        <a class="icon" href="https://www.youtube.com/channel/UCQmLicOr3Fu_CjpulB8hGpA">
+        <a class="icon" href="#">
             <i class="fab fa-youtube"></i>
         </a>
     </div>
